about section spacing fix and change class name

--- a/style.css
+++ b/style.css
@@ -135,18 +135,18 @@ a{
     margin-top: 40px;
     padding: 58px 0px 200px 0px;
 }
-.about .rap{
-    display: flex;
-    flex-direction: row-reverse;
+.about .row{
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     margin-top: 140px;
 }
-.about img{
+.about .right{
     max-height: 350px;
+    margin-right: 60px;
 }
 
-.about .btn_and_text{
+.about .left{
     width: 445px;
     margin-right: 70px;
     margin-left: 150px;
@@ -165,8 +165,9 @@ a{
     margin-bottom: 40px;
     color: var(--dark70);
 }
-.about .btns_about{
+.about .btns{
     display: flex;
+    flex-direction: row;
 }
 .about .btn_resume{
     background-color: rgba(30, 28, 28, 1);
